<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>Path planner package for ROS 2</description>

  <maintainer email="niko@example.com">niko</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
